--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -11,12 +11,26 @@
         background-color: #26272b;
         box-shadow: 0px 0px 12px #18191b;
         border-radius: 8px;
+        color: white;
         margin: 2rem 1rem;
+        transition: 0.5s ease-in-out;
         padding: .7rem 1rem;
         font-weight: 700;
-
-        .coin-name {
-            margin-left: -4rem;
+        .paragraph{
+            display: flex;
+            justify-content: center;
+            width: 20%;
+            @include mobile {
+                width: 33%;
+            }
+        }        
+        .diff {
+            display: flex;
+            width: 120px;
+            height: 100px;
+            justify-content: center;
+            align-items: center;
+            // margin-left: -4rem;
         }
 
         .hide-mobile {
